--- a/Scripts/Bipolar.SceneManagement.asmdef
+++ b/Scripts/Bipolar.SceneManagement.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "Bipolar.SceneManagement",
-    "rootNamespace": "",
+    "rootNamespace": "Bipolar.SceneManagement",
     "references": [
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229"
     ],
